# regmonkey_datavisualization

./: .flake8  .nojekyll  README.md  _quarto.yml  index.html  index.qmd  index.xml  listings.json  pyproject.toml  references.bib  robots.txt  search.json  sitemap.xml  update_requiremenmt.sh
.github/ISSUE_TEMPLATE/: env_request.yml  feature_request.yml
.github/workflows/: publish.yml
include/: custom.scss  dark.scss  light.scss  mathjax.html  setup_googletagmanager.html  setup_googletagmanager_body.html
posts/: introduction.html  introduction.qmd
posts/1D-datavisualization/: chapter-header.html  chapter-header.qmd  frequency-counts-of-data-with-bar-plot.html  frequency-counts-of-data-with-bar-plot.qmd
posts/comparison-of-groups/: categorical-group-ratios-with-stacked-bar-plot.html  categorical-group-ratios-with-stacked-bar-plot.qmd  chapter-header.html  chapter-header.qmd
posts/data/: monthly-average-temp-2024.csv
posts/eda-setup/: chapter-header.html  chapter-header.qmd  font-setup.html  font-setup.qmd
posts/relationships-between-variables/: chapter-header.html  chapter-header.qmd
posts/visualization-components/: Axes.html  Axes.qmd  chapter-header.html  chapter-header.qmd  legends.html  legends.qmd
site_libs/bootstrap/: bootstrap-573f401c18ac87487c003c8bb5689b85.min.css  bootstrap-d5d973b64e5cd4f7b29f2653373c8a62.min.css  bootstrap-dark-14c85206204d7837aeae361a34cf5d37.min.css  bootstrap-dark-338fb44f2e9297c6accdd2699a6e07b0.min.css  bootstrap-dark.min.css  bootstrap.min.css
