[project]
name = "regmonkey-data-visualization"
version = "0.2.0"
description = ""
authors = [
    {name = "RyoNak",email = "nakagamiryo0901@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<4.0"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
pandas = "^2.2.3"
regmonkey-style = "^1.6.1"
ipykernel = "^6.29.5"
jinja2 = "^3.1.6"
matplotlib = "^3.10.1"
nbformat = "^5.10.4"
seaborn = "^0.13.2"
numpy = "^2.2.4"
statsmodels = "^0.14.4"
attrs = "^25.3.0"
six = "^1.17.0"
typing-extensions = "^4.13.2"
nbclient = "^0.10.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
